<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation-view">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/menu_message"
        android:icon="@drawable/message"
        android:title="@string/message" />
    <item
        android:id="@+id/menu_sync"
        android:icon="@drawable/sync"
        android:title="@string/sync" />
    <item
        android:id="@+id/menu_trash"
        android:icon="@drawable/home"
        android:title="@string/trash" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item android:title="@string/profile">
        <menu>
            <item
                android:id="@+id/menu_login"
                android:icon="@drawable/login"
                android:title="@string/login" />
        </menu>
    </item>
    <item android:title="@string/communication">
        <menu>
            <item
                android:id="@+id/menu_share"
                android:icon="@drawable/share"
                android:title="@string/sharing" />
            <item
                android:id="@+id/menu_rate"
                android:icon="@drawable/rate_review"
                android:title="@string/rate_us" />
        </menu>
    </item>

</menu>